# cargo-hot

./: Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
protocol/: Cargo.toml
protocol/src/: lib.rs  server.rs
src/: hotpatch.rs  link.rs  main.rs  rustc.rs
