[package]
name = "cargo-hot-protocol"
description = "Protocol for cargo-hot integration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
server = ["dep:tokio"]

[dependencies]
anyhow.workspace = true
log.workspace = true
subsecond.workspace = true

bincode.workspace = true 
bincode.features = ["serde"]

tokio.workspace = true
tokio.features = ["net", "io-util"]
tokio.optional = true
